--- a/WPF_Haltestellen_MVVM_3Tiers/View.xaml
+++ b/WPF_Haltestellen_MVVM_3Tiers/View.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Haltestellen List" Height="583" Width="1122">
 
-    <Grid>
+    <Grid Margin="0,0,0,2">
         <Grid.RowDefinitions>
-            <RowDefinition Height="26*"/>
-            <RowDefinition/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Menu VerticalAlignment="Top" Height="23">
             <MenuItem Header="Datei">
@@ -18,8 +18,6 @@
             </MenuItem>
         </Menu>
         <ListView Name="lv" GridViewColumnHeader.Click="lv_clickOnHeader" ItemsSource="{Binding Haltestellen}" Margin="2,25,0,1">
-
-            <!-- Adding VirtualizingStackPanel -->
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <VirtualizingStackPanel />
@@ -41,6 +39,8 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <StatusBar Margin="-10,377,10,-57" Grid.RowSpan="2"/>
+        <StatusBar VerticalAlignment="Bottom" Grid.Row="1" Background="LightGray">
+            <TextBlock Name="statusBarText" Text="{Binding StatusBarText}" />
+        </StatusBar>
     </Grid>
 </Window>
