--- a/WPF_Haltestellen_MVVM_3Tiers/InfoWindow.xaml
+++ b/WPF_Haltestellen_MVVM_3Tiers/InfoWindow.xaml
@@ -30,7 +30,7 @@
 
             <StackPanel Grid.Row="0" Margin="10">
                 <TextBlock Text="Grüß dich!" Margin="0,0,0,10" TextWrapping="Wrap" />
-                <TextBlock Text="Dieses kleine, aber feine Programm wurde geschrieben von M.W. der IT42+ unter Leitung von Herrn Lueck. In diesem Programm findet Ihr einige Beispiele, wie Ihr mit LINQ und CSV Helper arbeiten könnt, um Daten zu sortieren und kategorisieren." Margin="0,0,0,10" TextWrapping="Wrap" />
+                <TextBlock Text="Dieses kleine, aber feine Programm wurde geschrieben von M.W. der IT42+ unter Leitung von Herrn Lueck. " Margin="0,0,0,10" TextWrapping="Wrap" />
                 <TextBlock Text="Mehr Projekte von mir findet Ihr unter:" Margin="0,0,0,10" TextWrapping="Wrap" />
                 <TextBlock>
                     <Hyperlink NavigateUri="https://github.com/GidJoe?tab=repositories" RequestNavigate="Hyperlink_RequestNavigate">https://github.com/GidJoe?tab=repositories</Hyperlink>
