--- a/WPF_Haltestellen_MVVM_3Tiers/View.xaml
+++ b/WPF_Haltestellen_MVVM_3Tiers/View.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="WPF_Haltestellen_MVVM_3Tiers.View"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
         Title="Haltestellen List" Height="583" Width="1122">
 
     <Grid Margin="0,0,0,2">
@@ -10,20 +11,15 @@
         </Grid.RowDefinitions>
         <Menu VerticalAlignment="Top" Height="23">
             <MenuItem Header="Datei">
-                <MenuItem Header="Download CSV" Click="MenuItem_ClickOnDLNewCSV" />
-                <MenuItem Header="Exit" Click="MenuItem_ClickOnExit" />
+                <MenuItem Header="Öffne CSV" Click="MI_LoadCSV" />
+                <MenuItem Header="CSV herunterladen" Click="MI_DownloadCSV" />
+                <MenuItem Header="Beenden" Click="MI_ClickOnBeenden" />
             </MenuItem>
             <MenuItem Header="Info">
-                <MenuItem Header="Zeige Infos" Click="MenuItem_ClickOnInfo"/>
+                <MenuItem Header="Zeige Infos" Click="MI_ClickOnInfo"/>
             </MenuItem>
         </Menu>
         <ListView Name="lv" GridViewColumnHeader.Click="lv_clickOnHeader" MouseDoubleClick="lv_MouseDoubleClick" ItemsSource="{Binding Haltestellen}" Margin="2,25,0,1">
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <VirtualizingStackPanel />
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="EVA_NR" DisplayMemberBinding="{Binding EVA_NR}" Width="100"/>
@@ -38,7 +34,13 @@
                     <GridViewColumn Header="Status" DisplayMemberBinding="{Binding Status}" Width="100"/>
                 </GridView>
             </ListView.View>
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <VirtualizingStackPanel IsVirtualizing="True" />
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
         </ListView>
+
         <StatusBar VerticalAlignment="Bottom" Grid.Row="1" Background="LightGray">
             <TextBlock Name="statusBarText" Text="{Binding StatusBarText}" />
         </StatusBar>
